@@ -11,9 +11,9 @@
 		<Include file="lib\AceGUI-3.0\AceGUI-3.0.xml"/>
 		<Include file="lib\AceConfig-3.0\AceConfig-3.0.xml"/>
 		<Include file="lib\LibSharedMedia-3.0\lib.xml"/>
-		<Include file="lib\LibDataBroker-1.1\LibDataBroker-1.1.lua"/>
-		<Include file="lib\LibDBIcon-1.0\LibDBIcon-1.0.lua"/>
-		<Include file="lib\LibWindow-1.1\LibWindow-1.1.lua"/>
+		<Script file="lib\LibDataBroker-1.1\LibDataBroker-1.1.lua"/>
+		<Script file="lib\LibDBIcon-1.0\LibDBIcon-1.0.lua"/>
+		<Script file="lib\LibWindow-1.1\LibWindow-1.1.lua"/>
 		<Include file="lib\AceGUI-3.0-SharedMediaWidgets\widget.xml"/>
 		<Include file="lib\LibBossIDs-1.0\lib.xml"/>
 		<Include file="lib\LibFail-1.0\lib.xml"/>
